# automation-testing-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  REFACTORING_STATUS.md  cart_report.html  conftest.py  dashboard.html  docker-compose.yml  last_report.html  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.cursor/rules/: ARCHITECT_PROTOCOL.md  PERSONAL_GITHUB_REPO_RULES.md  no-secrets-and-standards.mdc
.github/: EMAIL_NOTIFICATIONS_SETUP.md  EXTERNAL_VISIBILITY.md
.github/workflows/: CI_automation _tests.yml  CI_automation_tests.yml
artifacts/reports/: .gitkeep
config/: credentials.py
docs/: CODING_STANDARDS.md  DOCKER.md  STRUCTURE_ANALYSIS.md
helpers/: log_helpers.py
pages/: cart_page.py  login_page.py
pages/api/: base_api_client.py  jsonplaceholder_client.py
pages/blazedemo_pages/: confirmation_page.py  flight_selection_page.py  home_page.py  purchase_page.py
pages/orangeHRM_pages/: admin_page.py  dashboard_page.py  employee_details_page.py  login_page.py  my_info_page.py  pim_page.py
pages/saucedemo_pages/: cart_page.py  checkout_page.py  login_page.py
performance/load_testing/: locustfile.py
scripts/: migrate_structure.py  run_tests.py
security/vulnerability_scan/: security_scanner.py
src/: .gitkeep
src/automation_testing_playground/: __init__.py
src/automation_testing_playground/config/: api_config.py  blazedemo_config.py  credentials.py  orangeHRM_credentials.py  settings.py
src/automation_testing_playground/helpers/: logger.py
src/automation_testing_playground/models/: __init__.py  blazedemo_models.py  orangehrm_models.py
src/automation_testing_playground/pages/api/: base_api_client.py  jsonplaceholder_client.py
src/automation_testing_playground/pages/blazedemo_pages/: confirmation_page.py  flight_selection_page.py  home_page.py  purchase_page.py
src/automation_testing_playground/pages/orangeHRM_pages/: admin_page.py  dashboard_page.py  employee_details_page.py  login_page.py  my_info_page.py  pim_page.py
src/automation_testing_playground/pages/saucedemo_pages/: cart_page.py  checkout_page.py  login_page.py
src/automation_testing_playground/performance/load_testing/: locustfile.py
tests/: test_cart.py  test_cart_removal.py  test_login.py
tests/OrangeHRM/: test_orangehrm_add_employee.py  test_orangehrm_employee_search.py  test_orangehrm_job_titles.py  test_orangehrm_login.py  test_orangehrm_my_info.py
tests/api/: test_http_methods.py  test_jsonplaceholder_endpoints.py
tests/blazedemo/: test_blazedemo_form_validation.py  test_booking_details_match.py  test_booking_flow.py  test_booking_with_various_card_types.py
tests/e2e/OrangeHRM/: test_orangehrm_add_employee.py  test_orangehrm_employee_search.py  test_orangehrm_job_titles.py  test_orangehrm_login.py  test_orangehrm_my_info.py
tests/e2e/blazedemo/: test_blazedemo_form_validation.py  test_booking_details_match.py  test_booking_flow.py  test_booking_with_various_card_types.py
tests/e2e/saucedemo/: test_cart.py  test_cart_removal.py  test_checkout.py  test_login.py  test_login_edge_cases.py
tests/integration/api/: test_http_methods.py  test_jsonplaceholder_endpoints.py
tests/saucedemo/: test_cart.py  test_cart_removal.py  test_checkout.py  test_login.py  test_login_edge_cases.py
ui/: README.md  start_dashboard.ps1  start_dashboard.sh
ui/flask_api/: app.py
ui/react_dashboard/: VERIFICATION.md  package-lock.json  package.json
ui/react_dashboard/src/: App.jsx  index.css
ui/react_dashboard/src/components/: ErrorBoundary.jsx  (+4 more)
(+8 files in other folders)
